# mergebom

./: Cargo.toml  Dockerfile  rust-toolchain.toml
.github/workflows/: build_binary.yaml  build_container_image.yaml
src/: main.rs
